--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alarm</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="saatalarm.css">
 </head>
 <body>
-    
+    <div class="card">
+<img src="59988576-زنگ-آیکون-لبخند-ساعت.jpg" alt="" width="150px" height="150px">
+
+    <h1 class="time">22:22:22</h1>
+
+    <div id="aa" class="cont">
+<select >
+<option  selected hidden>Hors</option>
+<!-- <option  value="01">01</option> -->
+</select>
+<select>
+    <option  selected hidden>minets</option>
+   <!-- <option  value="01">01</option> -->
+</select>
+
+
+</div>
+<button>set alarm</button>
+    </div>
+    <script src="saatalarm.js"></script>
 </body>
 </html>
